- 
    Bug 
- 
    Resolution: Fixed
- 
     P4 P4
- 
    9
- 
        b31
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build | 
|---|---|---|---|---|---|---|
| JDK-8083368 | emb-9 | Roland Westrelin | P4 | Resolved | Fixed | b31 | 
| JDK-8063292 | 8u45 | Roland Westrelin | P4 | Resolved | Fixed | b01 | 
| JDK-8058240 | 8u40 | Roland Westrelin | P4 | Resolved | Fixed | b06 | 
| JDK-8071029 | emb-8u47 | Roland Westrelin | P4 | Resolved | Fixed | team | 
                    # A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/170355.amurillo/s/hotspot/src/share/vm/runtime/deoptimization.cpp:200), pid=12764, tid=2
# assert(result == NULL || result->is_oop()) failed: must be oop
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b27) (build 1.9.0-internal-fastdebug-201408221703.amurillo.jdk9-hs-2014-08-22-b27)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-201408221703.amurillo.jdk9-hs-2014-08-22-b27 compiled mode solaris-sparc compressed oops)
--------------- T H R E A D ---------------
Current thread (0x0000000100111800): JavaThread "main" [_thread_in_Java, id=2, stack(0xffffffff7df00000,0xffffffff7e000000)]
Stack: [0xffffffff7df00000,0xffffffff7e000000], sp=0xffffffff7dffde20, free space=1015k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15d88bc] void VMError::report_and_die()+0x58c
V [libjvm.so+0xa5f980] void report_vm_error(const char*,int,const char*,const char*)+0x70
V [libjvm.so+0xa8164c] Deoptimization::UnrollBlock*Deoptimization::fetch_unroll_info_helper(JavaThread*)+0x4b4
V [libjvm.so+0xa810b0] Deoptimization::UnrollBlock*Deoptimization::fetch_unroll_info(JavaThread*)+0x110
v ~DeoptimizationBlob
[error occurred during error reporting (printing native stack), id 0xe0000000]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~DeoptimizationBlob
J 1139 C2 PopSynchronousTarg.c()J (75 bytes) @ 0xffffffff67ce701c [0xffffffff67ce6e60+0x1bc]
j PopSynchronousTarg.p()V+27
j PopSynchronousTarg.main([Ljava/lang/String;)V+28
v ~StubRoutines::call_stub
            
#
# Internal Error (/opt/jprt/T/P1/170355.amurillo/s/hotspot/src/share/vm/runtime/deoptimization.cpp:200), pid=12764, tid=2
# assert(result == NULL || result->is_oop()) failed: must be oop
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b27) (build 1.9.0-internal-fastdebug-201408221703.amurillo.jdk9-hs-2014-08-22-b27)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-201408221703.amurillo.jdk9-hs-2014-08-22-b27 compiled mode solaris-sparc compressed oops)
--------------- T H R E A D ---------------
Current thread (0x0000000100111800): JavaThread "main" [_thread_in_Java, id=2, stack(0xffffffff7df00000,0xffffffff7e000000)]
Stack: [0xffffffff7df00000,0xffffffff7e000000], sp=0xffffffff7dffde20, free space=1015k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x15d88bc] void VMError::report_and_die()+0x58c
V [libjvm.so+0xa5f980] void report_vm_error(const char*,int,const char*,const char*)+0x70
V [libjvm.so+0xa8164c] Deoptimization::UnrollBlock*Deoptimization::fetch_unroll_info_helper(JavaThread*)+0x4b4
V [libjvm.so+0xa810b0] Deoptimization::UnrollBlock*Deoptimization::fetch_unroll_info(JavaThread*)+0x110
v ~DeoptimizationBlob
[error occurred during error reporting (printing native stack), id 0xe0000000]
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~DeoptimizationBlob
J 1139 C2 PopSynchronousTarg.c()J (75 bytes) @ 0xffffffff67ce701c [0xffffffff67ce6e60+0x1bc]
j PopSynchronousTarg.p()V+27
j PopSynchronousTarg.main([Ljava/lang/String;)V+28
v ~StubRoutines::call_stub
- backported by
- 
                    JDK-8058240 assert(result == NULL || result->is_oop()) failed: must be oop -           
- Resolved
 
-         
- 
                    JDK-8063292 assert(result == NULL || result->is_oop()) failed: must be oop -           
- Resolved
 
-         
- 
                    JDK-8071029 assert(result == NULL || result->is_oop()) failed: must be oop -           
- Resolved
 
-         
- 
                    JDK-8083368 assert(result == NULL || result->is_oop()) failed: must be oop -           
- Resolved
 
-