8055946: assert(result == NULL || result->is_oop()) failed: must be oop

Caller of popped frame doesn't have valid result during deoptimization

Reviewed-by: kvn